[tool.poetry]
name = "fango"
version = "0.1.0"
description = ""
authors = ["Gnomeek <gnomeek@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.1"
blueprint = "^3.4.2"
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# fmt and lint
[tool.isort]
py_version = 37
profile = "black"
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2

[tool.black]
line-length = 120
target-version = ['py37']

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
